# godot-installer

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/: last-godot-release.json
.github/workflows/: build-for-godot-release.yml  build.yml  check-godot-releases.yml
src/godot_installer/: __init__.py  app.py  cli.py  config.py  paths.py  shortcuts.py  versions.py
src/godot_installer/tabs/: install_tab.py  installed_tab.py  settings_tab.py
