[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-installer"
version = "1.0.0"
description = "Download, manage, and install multiple Godot Engine versions with desktop integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["godot", "gamedev", "version-manager", "installer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "requests>=2.31.0",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0.0", "pytest>=7.0.0"]
windows = ["pywin32>=306; sys_platform == 'win32'"]

[project.gui-scripts]
godot-installer = "godot_installer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
